# guildkeeper-rs

./: .gitignore  Cargo.toml  README.md  TEST.md  TODO.todo
apps/api/: Cargo.toml
apps/api/src/: config.rs  errors.rs  main.rs  state.rs
apps/api/src/features/: mod.rs
apps/api/src/features/accounts/: dto.rs  handler.rs  mod.rs
apps/api/src/features/auth/: client.rs  dto.rs  handler.rs  mod.rs  service.rs
apps/api/src/features/guilds/: dto.rs  handler.rs  mod.rs
apps/api/src/features/users/: dto.rs  handler.rs  mod.rs
apps/api/src/middleware/: auth.rs
apps/bot/: cargo.toml
apps/bot/src/: main.rs
apps/bot/src/api/: errors.rs
apps/bot/src/commands/: info.rs
apps/bot/src/features/commands/: mod.rs  panel.rs  ping.rs
apps/bot/src/features/handlers/: mod.rs  ready.rs
apps/bot/src/features/handlers/guild_create/: handler.rs
apps/bot/src/features/handlers/guild_member_addition/: dto.rs  handler.rs
apps/bot/src/features/handlers/interaction_create/: handler.rs
apps/bot/src/handlers/: guild_create.rs  guild_member_addition.rs  interaction_create.rs  mod.rs  ready.rs
apps/bot/src/models/: discord.rs  user.rs
apps/site/: -index.scss  Cargo.toml  index.html  index.scss
apps/site/public/assets/scss/: header.scss
apps/site/src/: errors.rs  main.rs
apps/site/src/app/: context.rs  layout.rs  mod.rs  router.rs
apps/site/src/features/: mod.rs
apps/site/src/features/dashboard/: page.rs
apps/site/src/models/: dashboard.rs
apps/site/src/services/dashboard/: calls.rs
config/: development.toml  production.toml
libs/core/: Cargo.toml
libs/core/src/: config_models.rs  errors.rs  lib.rs
libs/core/src/models/: account.rs  guilds.rs  mod.rs  user.rs
libs/core/src/persistence/: account_repo.rs  db.rs  discord_repo.rs  guilds_repo.rs  mod.rs  user_repo.rs  users_repo.rs
libs/sycamore_rstml/: Cargo.toml
markdown/: STATE.md
tools/cli/: Cargo.toml
tools/cli/src/: main.rs
