[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
# From Workspace
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
validator = { workspace = true }
reqwest = { workspace = true }
env_logger = { workspace = true }
chrono.workspace = true

# Only for this
tokio = "1.44.2"
actix-web = "4.10.2"
shuttle-actix-web = "0.53.0"
shuttle-runtime = { version = "0.53.0" }
actix-cors = "0.7.1"
utoipa = { version = "5.3.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["actix-web"] }
jsonwebtoken = "9.3.1"

# From Libs
core_lib = { path = "../../libs/core" }
dotenvy = "0.15.7"
surrealdb = "2.2.1"
url = "2.5.4"
rand = "0.9.0"
base64 = "0.22.1"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
futures-util = "0.3.31"
