[package]
name = "core_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
# From Workspace
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
validator = { workspace = true }
reqwest = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }

# Only for this
surrealdb = "2.2.1"
uuid = "1.16.0"
