[package]
name = "sycamore-rstml"
version = "0.1.0+0.9.1"
edition = "2021"
description = "rstml style view macro for sycamore"
authors = ["DavidOnTop <me@davidon.top>"]
readme = "README.md"
documentation = "https://docs.rs/sycamore-rstml"
license = "MIT"
repository = "https://github.com/davidon-top/sycamore-rstml.git"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
proc-macro2-diagnostics = "0.10.1"
quote = "1.0.39"
rstml = "0.12.1"
syn = { version = "2.0.100", features = ["full"] }
sycamore = { version = "0.9.1", features = ["suspense"] }
sycamore-view-parser = { git = "https://github.com/sycamore-rs/sycamore.git", version = "0.9.1" }