[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# From Workspace
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
validator = { workspace = true }
reqwest = { workspace = true }

# Only for this
clap = { version = "4.5.35", features = ["derive", "env"] }

# From Libs
core_lib = { path = "../../libs/core" }